# Applicative

./: Applicative.cabal
.stack-work/install/x86_64-linux-nopie/lts-9.14/8.0.2/flag-cache/: Applicative-0.1.0.0-67ysqfgo6xLJ0AjKPS5dOt  Applicative-0.1.0.0-L8nvUais0sN4TbsZHnF7lQ  MonadRandom-0.5.1-6uvIhB08u1RHnyKFfb2cRN  QuickCheck-2.9.2-LvlomhGMxrFBkX1zwiWpQu  StateVar-1.1.0.4-5dJbnTVECtEAhfJXPZKdbO  aeson-1.1.2.0-7ssY6fy1GxZGXxTPcOtf2k  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  ansi-wl-pprint-0.6.7.3-A79v826bgPr574HtaZPPqC  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  attoparsec-0.13.1.0-3ql4hcH9pGfBAlE21oqFTQ  base-compat-0.9.3-KeJp8zYMpcS9WibvTcxU22  base-orphans-0.6-AbJ3lKVXygDCG0eeQEv8Iu  bifunctors-5.4.2-KcF2f75KyQm5BjgJ8WkHCw  cabal-doctest-1.0.3-424yp4GSQAZHQyNl3c0zus  cabal-helper-0.7.3.0-GgnMvw3xDqG5ig90b4nErY  checkers-0.4.9.5-Dhm0rh3Bh7qFXgfQ8Df9YH  clock-0.7.2-8dRNleB7rysIZAOReuhpZA  cmdargs-0.10.18-1MOxB7BXiUZGCBZB9Kx8qK  comonad-5.0.2-Fq9Xy9jdx6uIyJZn00E6Yc  conduit-1.2.12.1-CTYKTJmwFo81r4LrAKDD8i  contravariant-1.4-29zF0Im431177ovfbHYCGv  cpphs-1.20.8-3Fssq2K4VwkKSMahhwZtBR  data-default-0.7.1.1-Atv1ZD6t1rI1MrH9qSGaQC  data-default-class-0.1.2.0-GsXqKN6o1X9jr0fF5qCVD  data-default-instances-containers-0.0.1-bob6IQGdJq92c061H46zK  data-default-instances-dlist-0.0.1-LBT1sjxIvyd63eC0aI9yNO  data-default-instances-old-locale-0.0.1-9zaGDEmgOixKkmLylWdN5l  distributive-0.5.3-IX4kyVcHAyoH4uFYrsjY1R  djinn-ghc-0.0.2.3-ADetweMLfHH4682dGPzOcp  djinn-lib-0.0.1.2-4AmYn3IUBZ15IuinyTpUzc  dlist-0.8.0.3-BHFBNaw8k6n9WiaUNzoXpk  either-4.4.1.1-6PiwKYkn4v6B4KO2R2Fu1b  exceptions-0.8.3-ADEDRATtUrMK1JW4zMQ9U  (+51 more)
app/: Main.hs
src/: Apl1.hs  BadMonoid.hs  Cow.hs  Ex1.hs  Ex2.hs  Law.hs  List.hs  Validate.hs  Validation.hs  ZipListApp.hs
src/EX1/: Exers1.hs  Exers2.hs  Exers3.hs  Vowels.hs
(+234 files in other folders)
