name:                Applicative
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Neo03/Applicative#readme
license:             BSD3
license-file:        LICENSE
author:              Vasiliy Simakov
maintainer:          vasimakov87@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                    ,  src/EX1
  exposed-modules:     Lib
                    ,  Ex1
                    ,  Ex2
                    ,  Validate
                    ,  Cow
                    ,  Law
                    ,  BadMonoid
                    ,  ZipListApp
                    ,  Exers1
                    ,  Exers2
                    ,  Exers3
  build-depends:       base >= 4.7 && < 5
                    ,  QuickCheck
                    ,  checkers
  default-language:    Haskell2010

executable Applicative-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Applicative
                     , QuickCheck
                     , checkers
  default-language:    Haskell2010

test-suite Applicative-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Applicative
                     , QuickCheck
                     , checkers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Neo03/Applicative
